--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@formily/core": "^2.0.0-beta.79",
+    "@formily/vue": "^2.0.0-beta.79",
+    "@vue/composition-api": "^1.0.2",
+    "ant-design-vue": "^1.7.6",
     "core-js": "^3.6.5",
     "vue": "^2.6.11"
   },
